--- a/_004.org
+++ b/_004.org
@@ -24,7 +24,7 @@ They followed the stinking baby at a right angle to the trail. As mentioned, for
 
 In the growth strata of most jungle or woods, there was a fairly consistently unoccupied bit of vertical real estate.
 
-There were juicy, mostly edible or at least useful ferns and broad-leafed weeds up to about a pinkie-thumb from the floor. The next-tallest "layer" was probably about nipple-hight for an adult Crec.
+There were juicy, mostly edible or at least useful ferns and broad-leafed weeds up to about a pinkie-thumb from the floor. The next-tallest "layer" was probably about nipple-height for an adult Crec.
 
 But a /baby/ could trek along unbothered by anything other than what for /him/ would be light knee-high, dewy, soft green leaves, with the next layer of green being, again for him, one or two heads above, which is a good thing as this is also a strata where spines and poisons were in wider use to shoo away anything that might disturb their peaceful plant-life.
 
@@ -43,6 +43,8 @@ Though he had a mostly normal speaking voice, if a bit high-pitched, his singing
 It was getting dark, but was not yet killing-palm. The forest-child seemed unbothered, and was now making occasional tight turns, as though the party had switched to surface streets and was almost home. There seemed to be a /destination/ coming up.
 
 Revealed slowly as they rounded a larger low tree, they could see a sort of hide that was clearly not Natural but was just as clearly very old.
+
+xxx they remark repeatedly about the stink.
 
 It was made out of stone that had been squared off mostly <-xxx. Where it was irregular, it appeared more that this was due to erosion of some kind. One could imagine it being /quite/ square in the past. It had a look that the men would both have described as "Unnatural"[fn:: This had a distinctly positive connotation. It had the sense of 'made by skilled cavepeople for utility and comfort.'].
 
@@ -115,7 +117,7 @@ The last palm of woods would not be entirely quiet at that time. Missing conch w
 
 It was not unusual for a lizard-bird to continue its hunt until early morning, even after dawn. The men did have clear skies and a sliver of morning-moon in their favor.
 
-/Play it by ear; we're safe for now/ was the unspoken conclusion. There was nothing tangabile the could do about the future at this point.
+/Play it by ear; we're safe for now/ was the unspoken conclusion. There was nothing tangible the could do about the future at this point.
 
 Grav and Gog's attention went back to the forest-baby.
 
@@ -133,7 +135,7 @@ Grav and Gog were instantly curious. There were so many plants in Nature, and so
 
 He had no whole leaves that they could inspect. Grav and Gog took small pinches as specimens and stored them safely in case it turned out there was important medicinal knowledge at stake.
 
-"Gog, I think we need to go easy. There's no judging its power from appearnces."
+"Gog, I think we need to go easy. There's no judging its power from appearances."
 
 "Sure. We need our wits about us. Let us just calibrate ourselves by supposing it has the force of toad-root."
 
@@ -153,13 +155,13 @@ After watching this and then mindlessly accepting the pipe from Gog, Grav's next
 
 He and Gog were laying on the floor face-up, with the tops of their heads a palm apart and each man's feet extending towards the hide's walls.
 
-They were both staring at the ceiling. They had been in a long, convoluted conversation following some of the most inspired trains of thought he could recall when he "came to". He had been both exploring his inner mind and having a deep conversation with Gog at the same time, Gog's voice being more or less detatched and coming from nowhere. He wasn't aware nor did he really care where Gog 'was'.
+They were both staring at the ceiling. They had been in a long, convoluted conversation following some of the most inspired trains of thought he could recall when he "came to". He had been both exploring his inner mind and having a deep conversation with Gog at the same time, Gog's voice being more or less detached and coming from nowhere. He wasn't aware nor did he really care where Gog 'was'.
 
 The thing that brought his sick-monkey around was Oh-Mas snarling out at the opening, spear at the ready, and a more or less normal, though very slow and very loud breathing from an all-finger all-finger all-finger gourd predator of some kind. Most likely a tooth-cat.
 
-They could see the very tip of one claw slipping in and out of the vine-work nearest the stone. The mass of vine was probably three parts of four of one pinkie-thumb in thicknest at the least. The claw, whoever's claw, was at least that long.
+They could see the very tip of one claw slipping in and out of the vine-work nearest the stone. The mass of vine was probably three parts of four of one pinkie-thumb in thickness at the least. The claw, whoever's claw, was at least that long.
 
-And it belonged to an animal smart enough to start work immediately on tearing the vine trapway away from the hide altogether, which for an averaged sized male cat would mean sure death, as it could probably fit a good way into the opening and its reach was enough to at least mince you up sufficiently for dying.
+And it belonged to an animal smart enough to start work immediately on tearing the vine trap-way away from the hide altogether, which for an averaged sized male cat would mean sure death, as it could probably fit a good way into the opening and its reach was enough to at least mince you up sufficiently for dying.
 
 The gaps between the vine provided enough space for the Oh-Mas to jab it a few times pretty good, to which it audibly reacted, which is a good sign.
 
@@ -175,7 +177,7 @@ Grav and Gog could now clearly see the mad beast at the end of the tunnel, the a
 
 Whatever the danger, the two men were captivated.
 
-The cats fangs looked like polished tin, and seemed to be devoid of defect. The gums anchoring the fangs were not pink but blood red, almost purple. Gog could /feel/ how tightly those fangs were held by those gums, which seemed to be made of flexing muscle, actively holding, wielding those fangs. The face-sized symmetrical tongue, tucked far back in the throat had spikes on its surface that went from semitransparent crystal where they were rooted in the tongue, to shiny black at the sharp tips, like tarantula fangs. Its "wiskers" were about a xx diameter at the root.
+The cats fangs looked like polished tin, and seemed to be devoid of defect. The gums anchoring the fangs were not pink but blood red, almost purple. Gog could /feel/ how tightly those fangs were held by those gums, which seemed to be made of flexing muscle, actively holding, wielding those fangs. The face-sized symmetrical tongue, tucked far back in the throat had spikes on its surface that went from semitransparent crystal where they were rooted in the tongue, to shiny black at the sharp tips, like tarantula fangs. Its "whiskers" were about a xx diameter at the root.
 
 As if in place of saliva, the tiger dripped think, undiluted blood from its mouth, it had no apparent wound in its mouth, but its throat could have easily been pierced so furious and sure were Oh-Mas' jabs.
 
@@ -197,27 +199,27 @@ The cat spent a few drop-stone seemingly calmed by the fire. It was pacing in a 
 
 But then the cat snapped.
 
-It charged the opening, propelling its whole body with hind legs and making syncronized swats with both fore limbs, claws extended. The cat was doing a sort of wheelie, propping up the front half of its body with accelerating rage.
+It charged the opening, propelling its whole body with hind legs and making synchronized swats with both fore limbs, claws extended. The cat was doing a sort of wheelie, propping up the front half of its body with accelerating rage.
 
-It's swatting, almost clapping, but with paws not quite meeting, got more rappid as he approached[fn:: This can be seen in modern domesticated casts. It's known as 'fuck your shit up' mode.].
+It's swatting, almost clapping, but with paws not quite meeting, got more rapid as he approached[fn:: This can be seen in modern domesticated casts. It's known as 'fuck your shit up' mode.].
 
 xxx sure seems like if cats like that walking around, no one would go outside.
 
 
 So long as it stayed where it was, all was safe.
 
-Things began to feel unsafe for the men when they looked at its eyes. To say nothing of the color or patterns in the cats fist-sized eyes, there was clearly /movement/. The cat seemed to have swirls of blue-green, glossy black, silver, and colors that they could recall but did not have words for. These patterns moved together in an inward whirlpool draining into its black puples.
+Things began to feel unsafe for the men when they looked at its eyes. To say nothing of the color or patterns in the cats fist-sized eyes, there was clearly /movement/. The cat seemed to have swirls of blue-green, glossy black, silver, and colors that they could recall but did not have words for. These patterns moved together in an inward whirlpool draining into its black pupils.
 
-On exceptionally high mountains, on exceptionally cold, crisp winter nights, if you were a caveman blessed with great eyesight and you sat quietly, but fully aware for a palm or so, you could see things in the night sky for which no xxx had anything but guesses. Most of what you could not see from the mouth of your cave were whispy and ephemeral looking, like carefully pulled and stompped <-xxx satin-cotton; thicker in some places, thinner in others, but with noticable patterns and hints at "structure".
+On exceptionally high mountains, on exceptionally cold, crisp winter nights, if you were a caveman blessed with great eyesight and you sat quietly, but fully aware for a palm or so, you could see things in the night sky for which no xxx had anything but guesses. Most of what you could not see from the mouth of your cave were wispy and ephemeral looking, like carefully pulled and stopped <-xxx satin-cotton; thicker in some places, thinner in others, but with noticeable patterns and hints at "structure".
 
 One of these high-night-ghosts was a swirl shape, though one seen at an angle[fn:: Andromeda. They called it 'Ender's-Sink'.], a more relatable example to most Crec would be the appearance of a whirlpool going down a sink, especially when different kinds of flowering duckweed and floating debris gives it some character and shows its "arms".
 
 The tooth-cat had eyes made of impossible colors that swirled down the drain of its eye. It's soul <-xxx, perhaps.
 
-The cat took on an otherworldly characther, it was as much speaking to them as it was trying to kill and eat them. The words had no anger. They just "were".
+The cat took on an otherworldly character, it was as much speaking to them as it was trying to kill and eat them. The words had no anger. They just "were".
 
 #+begin_quote
-Do I not suffer too? Behold my fury and my might. I only must eat, like you, I am mortal. To kill you without mercy is as wrong to me as it is for you to do such to a marmette <-xxx Now, having violated The Order, I must make you suffer. And I will.
+Do I not suffer too? Behold my fury and my might. I only must eat, like you, I am mortal. To kill you without mercy is as wrong to me as it is for you to do such to a marmot <-xxx Now, having violated The Order, I must make you suffer. And I will.
 #+end_quote
 
 "He's talking.", said Grav.
@@ -230,7 +232,7 @@ Both staring and both feeling the reality of what just happened, they watched th
 This isn't over.
 #+end_quote
 
-The cat accelerated directly away from the hide, where his flickering light could be seen peeking through the trees as he climbed the plane, seamingly for the stars.
+The cat accelerated directly away from the hide, where his flickering light could be seen peeking through the trees as he climbed the plane, seemingly for the stars.
 
 The next morning had the unfortunate, bleary, "all too real" feeling of a night having been overdone, as if reality did in fact have an anchor and this is what finding a new anchorage <-xxx felt like this. It was just another chore.
 
@@ -294,7 +296,7 @@ Approaching the next interesting bit of geology, they worked their way up the no
 
 Fayt-Caves was began on the edge of this rise. As soon as the men met its elevation, Fayt-Caves just was all around[fn:: This overlooking a rather beautiful plain bordered by a lush woods in the distance, it was the "fancy" part, as things go. And the most convenient location, with the grandest view, the one you met first along the trail, was of course Verk's. It actually was 'Mama Bear's Burrow' officially, for it appears that way in all maps and documents. It was the residence of the Choh-Ov's current Mama Bear. Verk had started staging his belongings in the surrounding neighborhood the minute he was appointed.].
 
-As they were scanning Verk's residence for possible useful intel, a finly dressed caveman stepped out from a guard's hide along the mansion's defince wall.
+As they were scanning Verk's residence for possible useful intel, a finely dressed caveman stepped out from a guard's hide along the mansion's defiance wall.
 
 "Gentle cavemen! Gog and Grav, yes?"
 
@@ -310,7 +312,7 @@ Would you please allow me to invite you in for drink or food? We have all that y
 
 "Oh. Uh," Grav coming back to his SYSTEM2 xxx I want to say "system2" here. or drew. xxx. took the pause to interrupt. "Sir. It is a pleasure to meet you. Our time is yours and we thank you for the fine greeting and invitation. We must tell you that we are trying to make conch on the morning-sun-right-side of Boar Clubbing-Field. I expect we will only be just in time as things are. May we not see you later in the evening. We do not want to face punishment, nor disappoint The Forest."
 
-Lansh smiled, fingers teepeed purposefully in front of his chest. "My close Cavemen! No. Oh, you needn't do that. We have seen to it that you are excused, of course! Verk in his wisdom sees greater things in you both.
+Lansh smiled, fingers tee-peed purposefully in front of his chest. "My close Cavemen! No. Oh, you needn't do that. We have seen to it that you are excused, of course! Verk in his wisdom sees greater things in you both.
 
 "Now, which of you wonderful fit cavemen is Grav?" Lansh's eyes went searchingly between the two men which he looked prepared to do in silence until he got an answer.
 
@@ -324,41 +326,12 @@ A man appeared to Lansh's side, dressed in a chef's hide <-xxx I want to say cav
 
 There was a scuffing of feet behind the men and they simultaneously felt their kit being lifted off their shoulders[fn:: xxx this would normally be kung-fu fighting time but because yadda yadda... xxx].
 
-Grav and Gog both took whatever would best pass for ceremonial <-xxx spear[fn:: describe an archetypal ceremonial spear.] and impulsively took some a small amount of food and xxx tucked it in their tuniccc? xxx. The great knives strapped xxx why did they not bushwhack with these knives xxx remained strapped to their waist and upper-thigh, in its sheath. If being disarmed, these would have been taken first, especially from behind.
+Grav and Gog both took whatever would best pass for ceremonial <-xxx spear[fn:: describe an archetypal ceremonial spear.] and impulsively took some a small amount of food and xxx tucked it in their tunic? xxx. The great knives strapped xxx why did they not bushwhack with these knives xxx remained strapped to their waist and upper-thigh, in its sheath. If being disarmed, these would have been taken first, especially from behind.
 
 "Of course you are free to take with you whatever food you like. You will have that and more inside. As you wish.", said Lansh quietly[fn:: Lansh is the kind of person who can first grab your attention using a toolkit of artful, convincing facial gestures, and then speak very quietly so that, even though we've established that he is /definitely/ speaking to you and /definitely/ has something of exceptional importance to say, but is for what ever reason going to be speaking to you always in a voice below conversational volume. You lean in—mission accomplished.].
 
 The men were now convinced that club-drill was canceled for them and that Verk was at the core of this. They felt relief at getting out of it. But they both held great suspicion of this man, and Verk; and this sort of "campus of intrigue" about which there were endless stories, and where they were surely going to spend the night.
 
+Upon entering through a gate near the guard recess <-xxx, they quickly lost interest or cared much about the outside world. The palace <-xxx had that effect on people. It emanated "comfort" and "luxury" and "safety" to the degree that you were just almost instantly content. Occupants grew used to this, which made them dangerous usually.
 
 xxx they get whores (and separate rooms): baby-maker-hire is not exactly normalized or legal, but no one at all would be surprised by it given the circumstances. One might be surprised if /not/.
-
-xxx his name is Lansh
-xxx he _might_ be a eunuch. No one is judging.
-xxx he has gotten word of their blahblah find and has some intrigue to involve them with.
-
-xxx
-
-xxx
-xxx they remark repeatedly about the stink.
-xxx
-xxx they cross the plains, maybe swat off a lizard-bird.
-xxx
-xxx They pass Verk's palace, remark or something.
-xxx
-xxx They get there. Find some musty, dusty armor to throw on, ill fitting.
-xxx
-xxx They /just make it/ to conch, stand at attention
-xxx
-xxx They get taken aside by someone. "Hey, you guys found that thing right?
-xxx Can you find me one?..." They are able to ditch club drill and do
-xxx something cool instead.
-
---
-
-xxx hmmm... orphaned paragraphs. murder them? xxx
-
-Off the trails and off the plains meant /in the woods/ adjacent to Snare Plains, a place where rich biome met rich biome and all kinds of killing went on. It was, in literal terms, "between the plains and the woods"[fn:: Which of course is the Crec expression that means 'between a rock and a hard place'. 'The plains' being haunted by something like a lizard-bird in the metaphor.] This was a phrase that was bandied about, but it was no joke to be in there any more than is, say to be caught in /the undertow/.
-
-And yet there they were. The forest-child was in-the-know about such things. There was no doubt. Lizard-bird aren't /everywhere/ in Crec. Given plenty of other factors, it took several hundred square miles to support just one. So they are rare, territorial, and deadly deadly. You might think in terms of the lizard-bird being to the Crec what great white shark is to modern humans, supposing of course that modern humans spend all their time swimming at the beach. These sky-trolling sharks were a lot less hypothetical; a lot more day-to-day. You were always right on the sky's shore, after all.
-
