--- a/_004.org
+++ b/_004.org
@@ -1,6 +1,4 @@
-#+title: Bird
-#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="index.css" />
-#+OPTIONS: num:nil
+* Bird
 
 Grav and Gog were faced with spending the night, baring a miracle, in the most dangerous place possible, only because a much greater danger had recently moved into the area, like bad weather, but worse.
 
@@ -334,4 +332,118 @@ The men were now convinced that club-drill was canceled for them and that Verk w
 
 Upon entering through a gate near the guard recess <-xxx, they quickly lost interest or cared much about the outside world. The palace <-xxx had that effect on people. It emanated "comfort" and "luxury" and "safety" to the degree that you were just almost instantly content. Occupants grew used to this, which made them dangerous usually.
 
+They were led through marble promenades that passed garden upon perfect garden. Only the well behaved plants were allowed in here. Most were simply beautiful in their own way.
+
+Grav realized he'd never before considered how big the palace and its grounds <-xxx might be. It was clear from the approach to Fayt-Caves that at least part of it occupied a pie-shaped prominence on the mesa's edge. It had great walls following the cliff and only peaks of a few tall structures were visible over the wall.
+
+It turned out the the palace grounds, indeed its /campus/ was enormous and green and perfect. It was all marble, statues, water-works, gardens, columns... And the curve of the land made a large amount of the grounds visible as they walked, much of it was on a smooth, gentle slope that went upward in the direction of Choh-Ov. There were uniform, tended lawns visible, and structures of all sort.
+
+But the residence <-xxx was obvious in its grandeur and positioning. They were headed in a leisurely zig-zag path in its direction.
+
+The columns along its front were all-finger man high stacks of boulders; each constituent boulder not quite a sphere but, slightly irregular, giving the appearance of theatrical props. They were squared off on opposite ends, giving lots of stacking surface, in proportion to their size. The varied in size from top to bottom to give a subtle bulging effect. These supported great timber roof work. These were working columns. Mamma Bear's Den is built like an enormous impromptu pole shelter, but with stone and man-square timbers.
+
+There were more slender, but still sound inner columns of the same height of the outer columns[fn:: Indeed the whole structure's roof was the same height, with a slight bias downward towards the "back" which abutted an especially grand garden, for which it provided water[fn:: The back of the mansion moo-xxx created a neat, uniform waterfall into a two-man wide gutter at far below. This was gravity-fed as need to support the garden.]. The entryways into the garden were simple, uniform rectangular slabs supported by four columns 1.5 man tall. In an especially heavy rain, the enormous slab and columns would noticeably hum to the hand.
+
+The men entered through the front, center of the palace. The interior was a kind of small city of smaller, but always elegant structures of various sort. The palace was a great shelter, with a city around it. It was a city within a city next to another city within a city, surrounded by a city; making at also a city within a city, for what was within the palace grounds walls could be fairly also be called a city.
+
+Indeed, in keeping with the symbolism, there was an entirely too big roaring fire in its center, even in sumer, always. If left unattended the fire would surely take days to die on its own, and it was always attended. It made the immediate surrounding unpleasantly hot and illsuited for "rooms", and so it was surrounded by baths, which made for a nice heat gradient from outer to inner pools, all connected, it also absorbed a good amount of this unecessary heat.
+
+Verk's quarters were in the morning-sun-left-back-side corner of the palace roof <-xxx where the breaze, occationally without having first wafted through the rattier neighborhoods, would reach him first, after being refreshed by plenty of green buffer. It also was almost never downwind of the great fire.
+
+This is not where they were headed. The were going to an ajacent corner, where the cortiers <-xxx lived and did their work, of a sort.
+
+Lansh's personal quarters were simple, elegant and absolutely spotless. Dois?? came behind them only a half palm <-xxx or so with their refreshments exactly as ordered. The cold[fn:: How cold?] watered juff with honey and freshly crushed door mouse mint[fn:: Relax. It's just a plant. The drink itself was a sort of caveman polite-company drink. Like a mint julep but far more common. It might be the "Crec's tea", except they already have thousands of those. It is the unofficial Forest beverage.]. Food they had. They liked the regularity of their diet. Being fast and nimble on the trail meant a particular, predictable diet that wouldn't say give you bowel troubles at the wrong time, something that Lansh, always the devoted host, reluctantly saw the wisdom in. They asked for the house's version of ambling-feast liver puck, and what they got was rather nice. They took just one or two exploratory bites and stored them for later, maybe if they felt safer with their dietary guard down.
+
+"Cavemen, I hope that everything is to your liking. I have quarters for you both of which, if you don't care for other arrangements can easily be made. My goal is to make you comfortable and, once we're all relaxed and acquainted, help The Forest[fn:: how is Lansh related to 'the forest'?] document the exquisite find you to cavemen made recently.", said Lansh, smoothly diving back into his fried possum filet salad, with cream-dried, honey-sweetened goat milk dressing[fn:: Also featuring, among other astonishing ingredients, thumb-sized roasted pine nuts halved down the middle.]. He cupped his spear-wielding hand politely and tried to hid with his hand the process of putting in an over-sized piece of lettuce sideways into his mouth.
+
+He did so and deftly wiped the perimeter of his lips in one movement with the thumb of the hand doing the concealing. This glob of dressing he some how made disappear.
+
+The two men sat silently as a strategy to draw information from Lansh. Anyone this urgent to keep the conversation going will inevitably say something useful if put under some pressure.
+
+"Cavemen. I don't explain myself well, do I?" He leaned back on his padded stone sofa[fn:: Appearance of Lansh].
+
+"To the extent news has traveled, high ranking Forest-Leaders have all shown great interest in your find. With a remarcably descriptive words, and some sketches made by our most tallented slatesmen, a pretty good 'picture' has emefged in the Public mind.
+
+I myself have not seen it yet, but I have seen a first-generation sketch of course, it having been four <-xxx days and with couriers <-xxx all employed and all putting in more palm than allotted, a trifling matter we must address.
+
+Neverminding[fn:: The author suggests that this is the right spelling.] that, this object is /astonishing/!"
+
+xxx I want to coin new words like that Shakespeare. I'm going to start by Germanizing "never mind".
+
+The men were still silent.
+
+Lansh: "Let's go back to the /finding/, would it be okay?"
+
+Grav and Gog were immedately suspicious. They independantly considered the worst case of this weasel's intrigue to likely be the Forestization of the mine. This they cared about not at all. They were pretty tired of mining. It was expected that you would be paid for such a thing with some kind of "esteem" but almost never with any kind of tangible value.
+
+They simply did not care. They were tired of mining, mostly. And Gog's brother XXX and his close-circle were an apt, sharp little troup of two all-finger-and men that were out to conquor the Forest so to speak. They were ambitious in was that Grav and Gog, while not looking down upon, did kind of seem overly materialistic and pointless. They were like children who had only just discovered "productivity" so enthusiastic was their drive for, yes just general goofing off like Grav and Gog, but also for "stuff", including prestige.
+
+They were all-round a good bunch and if the Forest wanted any involvement, should this be the ploy, XXX and company would be happy to be up to their nipples[fn:: This is a metaphorical, fun way of saying 'very busy', just as we say 'up to our eyeballs/ears'.] in whatever chore the Forest had in mind for them, likely with too many "very serious" meetings <-xxx clever word xxx.
+
+Grav and Gog were like leaves in the river in that regard.
+
+"My fine cavemen. The Forest has absolutely no intention of being involved in any way in your operations."
+
+The men may have let a 'tell' escape in their genuine surprise. Of course, this is one of a few ways this kind of conversation can go, but that he had picked that particular thing to assuage them about was uncanny. They only knew about their shared experience while talking later in private.
+
+"No. Nooo. Banish the thought! I'm sorry. This effort is truly only about careful documentation of what most agree surely is a find of a miraculous nature." Lansh made the nose-tugging gesture but in a very quick and practiced way that spoke of dismissal as much as anything. It was an odd choice of gesture in this case anyhow[fn:: Talk about what qualifies as 'careful documentation' to the Crec.].
+
+"Fine cavemen. Would you like an opportunity to talk at last? My excitement courts[fn:: This is a G-rated version of 'mounts' in this case. It's less 'profane' than say our 'screwed up'. Lansh is saying 'My great excitement [spirit] really fucked my sense of hospitality [spirit]'.] my hospitality.
+
+Please, what would you like to start with? Or shall we sleep on it? My entire tomorrow is yours. All-finger tomorrows. You two fine cavemen are now very important people."
+
+Neither much liked the nuance of this 'important'.
+
+A few opening words were stepped upon with forced smiles and humility, and Grav finally got started. "We have a kind of 'mine' operating far morning-sun-left-front-side along the Lame Rhino. In a conversation with our shared Father-Brother Verk, I promised to find and bring him a grand value-stone. Gog and I had work to do that day, but it was deferral and so we decided to devote it to seeing what we could find for our Father-Brother Verk[fn:: Gog's left eyelid twiched slightly at this.].
+
+I'm happy to tell more. Perhaps you can ask some questions. Gog and I are open books <-xxx cute expression xxx."
+
+Both men returned to their relaxed default upright posture, with legs folded underneath and vague smiles resting on their faces[fn:: Backed chairs, while comfortable, was something they tried to avoid like any other bad habit. They sat on the opposite matching sofa moo-xxx but in the way one might when sitting on the ground.].
+
+"Do you find much else there?"
+
+"Oh yes," Gog took a turn. "We are able to give much away as charity. We keep a responsible <-xxx amount for ourselves. We employ nearly all-finger all-finger cavepeople at any one time, all of whom are able to trade and leverage the value they receive for food and comfort and to help grow their family. And we make a lot of friends.
+
+Some do differently. We aren't a give-help[fn:: Charity, though it has no real legal meaning.]. There is a place for that. We just try to find the best use, given our goals, and divide up what we find appropriately. Giving our Workers what we promise them, of course, usually more, in value-stone and in other ways.
+
+It's really almost an overgrown hobby <-xxx for us. We sometimes talk about handing it over. We're not after the stone. We're after the fun and learning."
+
+"Oh, how noble.", said Lansh with no apparent irony, and giving every impression he had only scanned the above paragraphs (heh xxx really?).
+
+"Well, if I may enquire further, in my service to The Forest, have you ever found anything similar?"
+
+"No." they both said simaltaniously.
+
+"Nothing close.", said Grav. "Of course we are interested in exploring around and under the immediate area soon."
+
+"Oh?" Lansh interrupted. "I wonder if you cavemen would like to have some of The Forest's resources behind you?
+
+You know, a little help?"
+
+Again, suspicious, Gog responded for them both. "Maybe."
+
+"Well, we will talk about it later. How about a break?"
+
+Knowing this was not something they could politely decline. The three made a roundabout exit of the room, Lansh seeming to want to kind of tour them about this particular room before moving on, keeping the most impressive bits directly either directly behind and above him or over one shoulder or the other. This was an effortless routine for him.
+
+The idle talking of the party making its way to the dining hall <-xxx was entirely "fluff" <-xxx clever expression xxx, Lansh actively corralling the conversation into "fluff" territory while they were underway.
+
+As expected, the meal was only one or two mouthfuls altogether, the staff having a keen understanding guests' preference as part of their trade. <-xxx
+
+Lansh dabbed at his lips with his napkin[fn:: In fact a very mild, inert, felty, thick leaves about the size of one's face. They had a symmetrical beauty about them, being similar to a spade you might see on a playing card. The were first dried, then tamped lightly to make them pliable and shaken to dislodge lose pieces resulting from the tamping, dried for days more, shaken again and finally put in the warehouse-burrow moo-xxx, where they were retrieved, inspected, and shaken again by service staff.].
+
+"Magnificent. Did the two of you enjoy your meals?", Lanch looked up at them, as if he would be hurt by anything but a raving review.
+
+"Oh, yes Sir <-xxx. That was excellent.", said Gog. Them both thinking of noncommittal superlatives <-xxx.
+
+"", Grav
+
+, they both went with Lansh after some dwelling 
+
+xxx and I can tell you. I for one am astonished."
+
+xxx they hear a 'bolder-rhino' /detonation/ in the distance. They don't remark but it is footnoted.
+
 xxx they get whores (and separate rooms): baby-maker-hire is not exactly normalized or legal, but no one at all would be surprised by it given the circumstances. One might be surprised if /not/.
+
+xxx end of bird
