--- a/book.org
+++ b/book.org
@@ -1299,7 +1299,7 @@ Kids, don't forget to pick up your free toys and ask as many questions you like 
 
 Thag made his most enthusiastic wave goodbye. His one arm being a disproportionate part of his body's mass when compared to most, he almost made the flippy-flop of an unstrung bow, with both the upper and lower halves moving more or less equally, all the while grinning ghoulishly.
 
-* Bird
+* Bird :noexport:
 
 Grav and Gog were faced with spending the night, baring a miracle, in the most dangerous place possible, only because a much greater danger had recently moved into the area, like bad weather, but worse.
 
