--- a/book.org
+++ b/book.org
@@ -608,7 +608,7 @@ The two men were exhausted and both thinking it was time to move on to other sch
 
 "Yeah. That contraption we were thinking on to vine those out could stand to be ready about now. That's bigger than the one that inspired us!", said Grav.
 
-"Which, you might add, took four of our biggest Feelers, plus us to haul out. We paid Drih an extra one part of all-finger all-finger gourd[fn:: A gourd is /approximately/ one pound of mass<sup>*</sup>. All of the finger math works out to: 1/1000. So this means "one thousandths of a pound of gold", which works out to 0.016 modern gold ounces. Workers wages were always paid in gold. G&G had to pretty much invent the idea of value in order to pay the Workers, and value-butter (gold) was the least ambiguous thing to use, as almost any other thing they could think of had value that was abstract and negotiable. Paying in value-stone would have been like paying modern workers in fine paintings; yes, they have value, but its hard to know just how much without haggling with each and every Worker on pay day (or pay /days/, as payment was cleverly staggered.)
+"Which, you might add, took four of our biggest Feelers, plus us to haul out. We paid Drih an extra one part of all-finger all-finger gourd[fn:: A gourd is /approximately/ one pound of mass. All of the finger math works out to: 1/1000. So this means "one thousandths of a pound of gold", which works out to 0.016 modern gold ounces. Workers wages were always paid in gold. G&G had to pretty much invent the idea of value in order to pay the Workers, and value-butter (gold) was the least ambiguous thing to use, as almost any other thing they could think of had value that was abstract and negotiable. Paying in value-stone would have been like paying modern workers in fine paintings; yes, they have value, but its hard to know just how much without haggling with each and every Worker on pay day (or pay /days/, as payment was cleverly staggered.)
 
 Grav had begun to think about two different /kinds/ of value: The kind that is unambiguous, universally agreed-upon, and easily calculated (like gold), which he called 'fungal' (as it can spread and is uniform, like a fungus.) The other kind is subject to haggling and may vary from one person to the other (like paintings or gems). He called this kind of value 'not-fungal'.] to smash it to pieces over the course of a whole day, only to find a /couple/ of uvula[fn:: This is the closest and most familiar thing 'pea sized' (and shaped) that the Crav are ever likely to encounter.]" Gog added after some genuine thought, "I /think...maybe/!"
 
