--- a/book.org
+++ b/book.org
@@ -1928,7 +1928,7 @@ Fractions are sounded out by the Crec in a logical way that would to us seem ove
 
 - one and one half of one --> 1 + 1/2
 - two and two thirds of one --> 2 + 2/3
-- three and four fifths of one -- 3 + 4/5
+- three and four fifths of one --> 3 + 4/5
 - N and X Ys of one --> N + X/Y
 
 *** Abstract Ratios
